force-app/main/default/objects/Question_Option__c/Question_Option__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Store all options of picklist, checkbox and radio button type questions.</description>
    <label>Question Option</label>
    <nameField>
        <label>Question Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>