force-app/main/default/objects/Question_Option__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set as a default question option</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>