force-app/main/default/objects/Question_Option__c/fields/Name_Long__c.field-meta.xml
<CustomField>
    <fullName>Name_Long__c</fullName>
    <description>Added to increase text length of options for picklist and radio button in Questions .</description>
    <label>Name Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>