force-app/main/default/objects/Question_Option__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Set value for question option</description>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question Options</relationshipLabel>
    <relationshipName>Question_Options</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>