force-app/main/default/objects/Question_Option__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Set value for question option</description>
    <label>Value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>